Changes for 3.4.4rc1

New features:
..F....... [ZBXNEXT-4081] improved error message for case when none of supported database modules exists (gcalenko)

Bug fixes:
........S. [ZBX-12853] fixed last access not being updated for passive proxies after getting historical data (wiper)
..F....... [ZBX-6669] fixed use of current host as filter when selecting items for graph forms and trigger forms (gcalenko)
..F....... [ZBX-12722] fixed scrollbar causing a JS error in "500 latest values" page due to unnecessarily initialization (Ivo)
..F....... [ZBX-12860] fixed problem counting in host groups in navigation tree widget (miks)
..F....... [ZBX-12710] fixed OS type detection logic (vjaceslavs)
..F....... [ZBX-12543] fixed problems with session management (vjaceslavs)
..F....... [ZBX-12670] fixed {HOST.*} macro support in map trigger elements (vjaceslavs)
..F....... [ZBX-12784] fixed advanced label support in map editing mode (vjaceslavs)
..F....... [ZBX-12666] fixed ETag comparison check in jsLoader for web server with enabled compression (gcalenko)
..F....... [ZBX-12775] fixed undefined index error in dashboard problems widget (miks)
........S. [ZBX-12857] improved pre-processing manager performance when processing large number of values (wiper)
........S. [ZBX-12259] added an informative warning about lack of data for macros used in LLD rule filter (viktors)

--------------------------------------------------------------------------------
Changes for 3.4.3

3.4.3rc1 was released as 3.4.3 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.3rc1

New features:
...G...PS. [ZBXNEXT-1862] modified server, proxy and agent to follow changes in /etc/resolv.conf (Andris)

Bug fixes:
.......PS. [ZBX-12521] improved logging in external checks (valdis)
..F.I..... [ZBX-12659] fixed missing information in "Status of Zabbix" widget with huge sessions table (Sasha)